# .config-templates

./: .editorconfig  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  action.yml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  setup-uv.sh  start-marimo.sh  startup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  renovate.json  settings.yml
.github/actions/setup-project/: action.yml
.github/scripts/: book-extras.sh  book.sh  bump.sh  marimushka.sh  release.sh  sync.sh  update-readme-help.sh
.github/scripts/customisations/: build-extras.sh  post-release.sh
.github/taskfiles/: build.yml  cleanup.yml  docs.yml
.github/workflows/: _devcontainer.yml  book.yml  ci.yml  deptry.yml  devcontainer.yml  docker.yml  marimo.yml  pre-commit.yml  release.yml  structure.yml  sync.yml  tag.yml
.github/workflows/scripts/: version_matrix.py  version_max.py
.gitlab/: renovate.json
.gitlab/ci-templates/: sync-config-templates.yml
book/marimo/: add.py  df.py
docker/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md
scripts/: up.sh  update.sh
src/config/: __init__.py  add.py
src/rhiza/: __init__.py
src/tests/: test_docs.py  test_env.py
taskfiles/: build.yml  docs.yml  quality.yml  test.yml
tests/: conftest.py  test_build_taskfile.py  test_docs.py  test_docstrings.py  test_makefile.py  test_pseudo.py  test_pseudo2.py  test_readme.py  test_release_script.py  test_sync_script.py  test_taskfile.py
tests/test_config_templates/: conftest.py  test_git_repo_fixture.py  test_makefile.py  test_readme.py  test_structure.py  test_sync_script.py
tests/test_rhiza/: test_structure.py
