[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "config-templates"
version = "0.9.0"
description = "Reusable configuration templates for modern Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Schmelzer" }
]
keywords = ["templates", "configuration", "taskfile", "ci", "ruff"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/tschm/.config-templates"
Repository = "https://github.com/tschm/.config-templates"
Issues = "https://github.com/tschm/.config-templates/issues"

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest==9.0.1",
    "pre-commit==4.5.0",
    "marimo==0.18.1",
    "pdoc>=16.0.0",
]

[tool.hatch.build.targets.wheel]
# Use src-layout: package code is under src/config
packages = ["src/config"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
